// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyBanner View Component earnedReward isGuest should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={1}
        estimatedSubtotal={33}
        fsPoints="fs18"
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={true}
        isProductDetailView=""
        labels={Object {}}
        pointsDescription={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        remainingPlcc={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        showSubtotal={true}
        subHeadingLabel=""
      />
      <div
        className="footer alignCenter"
      />
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component earnedReward should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={0}
        estimatedSubtotal={33}
        fsPoints="fs18"
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={true}
        isProductDetailView=""
        labels={Object {}}
        pointsDescription={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        remainingPlcc={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        showSubtotal={true}
        subHeadingLabel=""
      />
      <div
        className="footer alignCenter"
      />
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={1}
        estimatedSubtotal={33}
        fsPoints="fs16"
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={false}
        isProductDetailView=""
        labels={Object {}}
        remainingPlcc=""
        showSubtotal={true}
      />
      <div
        className="footer alignCenter"
      >
        <span>
          <Styled(Anchor)
            anchorVariation="primary"
            className="applyNow"
            fontSizeVariation="medium"
            underline={true}
          />
          <Styled(Anchor)
            anchorVariation="primary"
            className="learnMore elem-pl-XL"
            fontSizeVariation="medium"
            underline={true}
          />
        </span>
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={1}
        estimatedSubtotal={33}
        fsPoints="fs18"
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={true}
        isProductDetailView=""
        labels={Object {}}
        pointsDescription={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        remainingPlcc={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        showSubtotal={true}
        subHeadingLabel=""
      />
      <div
        className="footer alignCenter"
      />
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={0}
        estimatedSubtotal={33}
        fsPoints="fs16"
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={false}
        isProductDetailView=""
        labels={Object {}}
        remainingPlcc=""
        showSubtotal={true}
      />
      <div
        className="footer alignCenter"
      >
        <span>
          <Styled(Anchor)
            anchorVariation="primary"
            className="applyNow"
            fontSizeVariation="medium"
            underline={true}
          />
          <Styled(Anchor)
            anchorVariation="primary"
            className="learnMore elem-pl-XL"
            fontSizeVariation="medium"
            underline={true}
          />
        </span>
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component not isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={0}
        estimatedSubtotal={33}
        fsPoints="fs16"
        getCurrencySymbol=""
        headingLabel={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        isPlcc={false}
        isProductDetailView=""
        labels={Object {}}
        remainingPlcc=""
        showSubtotal={true}
      />
      <div
        className="footer alignCenter"
      >
        <span>
          <Styled(Anchor)
            anchorVariation="primary"
            className="applyNow"
            fontSizeVariation="medium"
            underline={true}
          />
          <Styled(Anchor)
            anchorVariation="primary"
            className="learnMore elem-pl-XL"
            fontSizeVariation="medium"
            underline={true}
          />
        </span>
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;
